New Massive project

--- a/OS_DEV/cmnd/Makefile
+++ b/OS_DEV/cmnd/Makefile
@@ -1,19 +1,21 @@
 flags=-O2 -std=c23 -I../api
 ldflags=
 
-.PHONY: all clean
+.PHONY: all clean clear
 
-all:clean cmnd 
+all:clean clear cmnd 
 
 ../api/api.o: ../api/api.c
-	$(MAKE) -C ../api -sk "CFLAGS=$(flags)"
+	$(MAKE) -C ../api -sk "CFLAGS=$(flags)" clean all
 
 cmnd: cmnd.o ../api/api.o
 	gcc $(flags) $^ -o $@ $(ldflags)
 
 cmnd.o: cmnd.c cmnd.h
 	gcc $(flags) -c $<
-
+clear:
+	cd ../api
+	$(MAKE) clean
 clean:
 	rm -rf *.o cmnd
 
