Work in progress of Filesystem for OS

--- a/OS_DEV/api/Makefile
+++ b/OS_DEV/api/Makefile
@@ -1,13 +1,24 @@
 flags=-O2 -std=c2x -I.
-ldflags=
+ldflags=-ldl -shared -fPIC
 
 .PHONY: all clean
 
-all: clean api.o
+all: clean api.so
+
+api.so: api.o disk.o stdoslib.o fs.o
+	gcc $(flags) $(CFLAGS) $(ldflags)  $^ -o $@
 
 api.o: api.c api.h os.h
-	gcc $(flags) $(CFLAGS) -c $<
+	gcc $(flags) $(CFLAGS) -fPIC -c $<
+
+disk.o: disk.c disk.h
+	gcc $(flags) $(CFLAGS) -fPIC -c $<
+
+stdoslib.o: stdoslib.c stdoslib.h
+	gcc $(flags) $(CFLAGS) -fPIC -c $<
+fs.o: fs.c fs.h
+	gcc $(flags) $(CFLAGS) -fPIC -c $<
 
 clean:
-	rm -rf *.o
+	rm -rf *.o *.so
 
