--- a/Networks/.vscode/settings.json
+++ b/Networks/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "files.associations": {
-        "networks.h": "c"
+        "networks.h": "c",
+        "string.h": "c",
+        "stdoslib.h": "c",
+        "inet.h": "c",
+        "unistd.h": "c",
+        "sstream": "c"
     }
 }
