Added some more of my rice configs

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -268,7 +268,6 @@ ecosystem{
     no_donation_nag = true
 }
 
-workspace = 2, gapsin:15, gapsout:60, layout:dwindle
 workspace = 3, gapsin:5, gapsout:40, layout:floating, border:4
 
 windowrulev2 = workspace 2, class:^(app\.zen_browser\.zen)$
@@ -278,12 +277,13 @@ windowrulev2 = workspace 4, class:^(ws4-.*)$
 
 
 $mainMod = SUPER 
+bind = ,F1, exec,rofi -show emoji
 bind = CTRL+ALT, T, exec, $terminal
-bind = CTRL, T, exec, $terminal
 bind = $mainMod, Q, forcekillactive,
 bind = CTRL, Q, forcekillactive,
 bind = $mainMod, D, forcekillactive,
 bind = $mainMod, M, exit,
+bind = $mainMod, H, exec, rofi -show keys
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, N, exec, $notes
@@ -300,6 +300,14 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = ALT, left,workspace, e-1
+bind = ALT, right,workspace, e+1
+bind = CTRL, right, swapwindow, r
+bind = CTRL, left, swapwindow, l
+bind = CTRL, up, swapwindow, u
+bind = CTRL, down, swapwindow, d
+
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -330,9 +338,10 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
-bind = $mainMod SHIFT, Left, workspace, e+1
-bind = $mainMod SHIFT, Right, workspace, e-1
-
+bind = $mainMod SHIFT, Left, workspace, e-1
+bind = $mainMod SHIFT, Right, workspace, e+1
+bind = $mainMod, TAB, cyclenext  
+bind = $mainMod SHIFT, TAB, cyclenext, prev
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
