Started work on Ethernet Layer packet parsing

--- a/Networks/.vscode/settings.json
+++ b/Networks/.vscode/settings.json
@@ -5,6 +5,7 @@
         "stdoslib.h": "c",
         "inet.h": "c",
         "unistd.h": "c",
-        "sstream": "c"
+        "sstream": "c",
+        "ethernet.h": "c"
     }
 }
