--- a/IhitplayzYT_Arch/.obsidian/app.json
+++ b/IhitplayzYT_Arch/.obsidian/app.json
@@ -3,5 +3,12 @@
   "showLineNumber": true,
   "vimMode": true,
   "showUnsupportedFiles": true,
-  "promptDelete": false
+  "promptDelete": false,
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
