Added major progress to BM25 indexer

--- a/BM25_indexer/Makefile
+++ b/BM25_indexer/Makefile
@@ -1,23 +1,27 @@
-flags:= -Wall -Wextra -Wpedantic -std=c++20
-objs:=main.o Stemmer.o stopwords.o utility.o
-all : main
+COMPILER := g++
+flags:= -Wall -Wextra -Wpedantic -std=c++20 -g -O0
+objs:=main.o Stemmer.o stopwords.o utility.o bm25.o
+all : clean main
 
 .PHONY:all clean
 
 main: $(objs)
-	g++ $^ -o $@
+	$(COMPILER) $^ -o $@
 
-main.o:main.h errors.h Stemmer.h stopwords.h utility.h
-	g++ $(flags) -c main.cpp
+main.o:main.h errors.h Stemmer.h stopwords.h utility.h bm25.h
+	$(COMPILER) $(flags) -c main.cpp
 
 Stemmer.o:Stemmer.h utility.h
-	g++ $(flags) -c Stemmer.cpp
+	$(COMPILER) $(flags) -c Stemmer.cpp
 
 stopwords.o:stopwords.h
-	g++ $(flags) -c stopwords.cpp
+	$(COMPILER) $(flags) -c stopwords.cpp
 
 utility.o:utility.h
-	g++ $(flags) -c utility.cpp
+	$(COMPILER) $(flags) -c utility.cpp
+
+bm25.o : bm25.h
+	$(COMPILER) $(flags) -c bm25.cpp
 
 clean:
 	rm -rf *.o main
